# sqlalchemy-capture-sql

./: .gitignore  LICENSE  README.md  deploy.txt  setup.cfg
src/sqlalchemy_capture_sql/: __init__.py  base.py
tests/: test_basic.py
