# https://towardsdatascience.com/5-simple-steps-to-package-and-publish-your-python-code-to-pypi-d9f5c43f9d4
[metadata]
name = sqlalchemy-capture-sql
version = 0.1.3
author = Robert Lujo
author_email = trebor74hr@gmail.com
description = A small library that enables capturing SQLAlchemy SQL statements / queries.
long_description = file: README.md
long_description_content_type = text/markdown
# git@github.com:trebor74hr/sqlalchemy-capture-sql.git
url = https://github.com/trebor74hr/sqlalchemy-capture-sql
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir =
     = src
python_requires = >=3.2
include_package_data = True

[options.packages.find]
where=src
